deployments/vault/04-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault
  namespace: vault
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      containers:
        - name: vault
          image: vault:1.7.2
          args:
            - server
          imagePullPolicy: Always
          securityContext:
            capabilities:
              add:
                - IPC_LOCK
          ports:
            - name: web
              containerPort: 8200
          volumeMounts:
            - name: config
              mountPath: /vault/config
            - name: data
              mountPath: /vault/file
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: vault-pvc
        - name: config
          configMap:
            name: vault
