deployments/vault/05-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: vault
spec:
  selector:
    app: vault
  ports:
    - name: web
      protocol: TCP
      port: 8200
      targetPort: web
